--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://naterengo.github.io/my-app",
+  "homepage": "https://nate-rengo.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
